right hand side content for the page created however still some layout issues

--- a/pointsLab-codeContents/index.scss
+++ b/pointsLab-codeContents/index.scss
@@ -106,9 +106,9 @@ $primaryYellow: #FFE600;
                     background-color: $primaryYellow;
                     border-radius: 5px;
                     border: 1px solid black;
-                    padding: 10px;
-                    padding-left: 20px;
-                    padding-right: 20px;
+                    padding: 15px;
+                    padding-left: 30px;
+                    padding-right: 30px;
                     margin-right: 20px;
                     margin-top: 50px;
                     margin-bottom: 80px;
@@ -179,19 +179,36 @@ $primaryYellow: #FFE600;
         flex-direction: column;
         .tab_btn {
             font-size: 2rem;
+            font-weight: bold;
         }
     }
     
-    .container {
-        padding-left: 50px;
-        max-width: 600px;
-        // border: 3px solid red;
+    .pointsLabTitle {
+        margin-bottom: 50px;
+        margin-left: 20px;
+    }
+
+    .preContainer {
+        @media screen and (min-width: 1420px) {
+            left: calc(0.5*(100% - 1420px));
+        }
+        .container {
+            display: flex;
+            padding-left: 20px;
+            // border: 3px solid red;
+            h1 {
+                font-size: 2.5rem;
+            }
+            .tab_box {
+                    width: 600px;
+                }
+        }
     }
     
     .line {
         position: absolute;
-        top: 0;
-        left: 20px;
+        top: 37px;
+        left: 2px;
         width: 3px;
         height: 37px;
         border-radius: 5px;
@@ -202,6 +219,11 @@ $primaryYellow: #FFE600;
     .active {
         color: $primaryTeal;
     }
+
+    .content {
+        line-height: 30px;
+        font-size: 1.2rem;
+    }
     
     .contentActive{
         display: block;
@@ -209,4 +231,13 @@ $primaryYellow: #FFE600;
 
     .contentInactive {
         display: none; 
+    }
+
+    .tutorialScreen {
+        background-color: purple;
+        height: 700px;
+        min-width: 700px;
+        border-radius: 40px;
+        filter: drop-shadow(10px 10px 50px #151515);
+        margin-left: 50px;
     }
